# Histogram

./: .gitignore  .gitmodules  CMakeLists.txt  Histogram.cpp  Histogram.h  Histogram.hpp  HistogramDifferences.hpp  HistogramGenerator.h  HistogramGenerator.hpp  HistogramHelpers.hpp  MaskedHistogram.h  MaskedHistogram.hpp  MaskedHistogramGenerator.h  MaskedHistogramGenerator.hpp  QuadrantHistogram.h  QuadrantHistogramProperties.h
Tests/: CMakeLists.txt  TestHistogram.cpp  TestHistogramOfAdaptor.cpp  TestHistogramTiming.cpp  TestMaskedHistogram.cpp
